# rbat

./: .gitignore  Cargo.toml  README.md  debug_test.rs
.github/chatmodes/:  4.1.chatmode.md
.github/prompts/: cyclic.prompt.md
blend_file_reader/: Cargo.toml
blend_file_reader/examples/: debug_blend_structure.rs  find_loc_field.rs
blend_file_reader/src/: blend_file.rs  debug.rs  debug_image.rs
blend_file_reader/tests/: blendfile_dna_io_tests.rs  blendfile_dna_tests.rs  blendfile_loading_tests.rs  blendfile_modification_tests.rs  bpathlib_tests.rs  integration_tests.rs  shaman_tests.rs
docs/: INITIAL.md  blender-asset-tracer-codebase-map.md
examples/: debug_blend_structure.rs  demo.rs
src/: blend_file.rs  block.rs  dna.rs  dna_io.rs  dna_name.rs  error.rs  header.rs  lib.rs  library_link.rs  main.rs
tests/: blendfile_loading_tests.rs  integration_tests.rs
wherego/: Cargo.toml
wherego/examples/: basic_usage.rs
wherego/src/: lib.rs
wherego/tests/: comprehensive_move_tests.rs  watcher_tests.rs
