[package]
name = "blend-file-reader"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.4"
memmap2 = "0.9"
flate2 = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.0"
url = "2.4"
urlencoding = "2.1"
zstd = "0.12"

[[bin]]
name = "blend-file-reader"
path = "src/main.rs"
